--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,8 @@ fastapi = "^0.105.0"
 uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
 sqlalchemy = "^2.0.23"
 python-dotenv = "^1.0.0"
+alembic = "^1.13.0"
+pymysql = "^1.1.0"
 
 
 [build-system]
